# rust-clean-template

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml
.sqlx/: query-26dbb97eb1f7ec24bc18580a0a39e43be4440c2c29b51392d98db81768cb27e5.json  query-4c2a469d405673a78571c51d8c08bee299e443801d9e318322a86b022e8cb99f.json  query-820eab3c6e5b4c4020d099053717b9681c1668d9d1cb11c996f30a7cf186120c.json  query-d0d6e5d38b12e0e90d3e0d30236b7fa198421fb32c01e4aff886ac0b18a42de4.json  query-da0baff2f490c0d318e5ab2261b7da23345c179a177ea4407687a2e46f834485.json  query-e84e82412cc2abf3a7949588cab1f0f53dd8bd8e3aa0ecc3cfaed73d31259be0.json  query-ea227672592ce5408df1d9318d8db668050f36071c865051fb2746504fd452b2.json
bins/api/: Cargo.toml
bins/api/src/: main.rs
bins/consumer/: Cargo.toml
bins/consumer/src/: main.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/src/abstractions/: brute_force.rs  mod.rs  password_hasher.rs  token_provider.rs
crates/application/src/dto/: auth_dto.rs  mod.rs  user_dto.rs
crates/application/src/error_types/: mod.rs
crates/application/src/services/: auth_service.rs  mod.rs  user_service.rs
crates/application/src/usecases/auth/: login.rs  mod.rs  refresh_token.rs  register.rs
crates/application/src/usecases/users/: delete_user.rs  get_user_by_id.rs  get_users.rs  mod.rs  update_user.rs
crates/application/tests/: auth_tests.rs  users_tests.rs
crates/application/tests/common/: mod.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/entities/: failed_login.rs  mod.rs  refresh_token.rs  user.rs
crates/domain/src/errors/: mod.rs
crates/domain/src/repositories/: failed_login_repository.rs  mod.rs  refresh_token_repository.rs  user_repository.rs
crates/domain/tests/: failed_login_tests.rs  user_tests.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/database/: connection.rs  mod.rs
crates/infrastructure/src/database/models/: failed_login_model.rs  mod.rs  refresh_token_model.rs  user_model.rs  user_role.rs
crates/infrastructure/src/database/repository_impls/: brute_force_protection_impl.rs  failed_login_repository_impl.rs  mod.rs  refresh_token_repository_impl.rs  user_repository_impl.rs
crates/infrastructure/src/messaging/: mod.rs
crates/infrastructure/src/messaging/models/: mod.rs
crates/infrastructure/src/messaging/rabbitmq/: connection.rs  consumer.rs  mod.rs  producer.rs
crates/infrastructure/src/security/: bcrypt_hasher.rs  jwt_token_provider.rs  mod.rs
crates/infrastructure/tests/: brute_force_integration_tests.rs
crates/presentation/api/: Cargo.toml
crates/presentation/api/src/: lib.rs  state.rs  swagger.rs
crates/presentation/api/src/handlers/: auth_handler.rs  mod.rs  user_handler.rs
crates/presentation/api/src/middleware/: brute_force_protection.rs  jwt_middleware.rs  mod.rs
crates/presentation/api/src/routes/: auth_routes.rs  mod.rs  user_routes.rs
crates/presentation/consumer/: Cargo.toml
crates/presentation/consumer/src/handlers/: mod.rs  user_event_handler.rs
crates/presentation/consumer/src/models/: mod.rs  user_event.rs
migrations/: V1__create_users_table.sql  V2__add_jwt_table.sql  V3__add_failed_logins_table.sql  V4__failed_logins_created_at_not_null.sql
scripts/: migrate.sh
