[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/presentation/api",
    "crates/presentation/consumer",
    "bins/api",
    "bins/consumer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.19", features = ["derive"] }
bcrypt = "0.17"
jsonwebtoken = "9.3"
utoipa = { version = "5.3", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.1", features = ["actix-web"] }
lapin = "2.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
futures-lite = "2.0"

