[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/presentation/api",
    "crates/presentation/consumer",
    "bins/api",
    "bins/consumer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.19", features = ["derive"] }
bcrypt = "0.18.0"
jsonwebtoken = "10.3.0"
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
lapin = "2.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
futures-lite = "2.0"
actix-cors = "0.7"

