[package]
name = "rust-clean-consumer-binary"
version.workspace = true
edition.workspace = true

[[bin]]
name = "consumer"
path = "src/main.rs"

[dependencies]
rust-clean-consumer-lib = { path = "../../crates/presentation/consumer" }
rust-clean-infrastructure = { path = "../../crates/infrastructure" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
dotenvy = "0.15"
