[package]
name = "rust-clean-application"
version.workspace = true
edition.workspace = true

[dependencies]
rust-clean-domain = { path = "../domain" }
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
mockall = "0.14.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

