[package]
name = "rust-clean-infrastructure"
version.workspace = true
edition.workspace = true

[dependencies]
rust-clean-domain = { path = "../domain" }
rust-clean-application = { path = "../application" }
sqlx = { workspace = true, features = ["uuid"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
thiserror = "1.0"
config = "0.13"
tracing = "0.1"
lapin = { version = "2", features = ["rustls-native-certs"] }
futures-lite = "2.0"
sha2 = "0.10"
async-trait = "0.1"
uuid = "1"
hex = "0.4"
chrono = "0.4"
