[package]
name = "rust-clean-api"
version.workspace = true
edition.workspace = true

[dependencies]
rust-clean-application = { path = "../../application" }
rust-clean-domain = { path = "../../domain" }
actix-web = "4.12.1"
actix-cors = "0.7.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
config = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
futures-util = "0.3"

# JWT
# jsonwebtoken removed - moved to infrastructure

# Password hashing
# bcrypt removed - moved to infrastructure

# Swagger/OpenAPI

utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4"
wiremock = "0.5"
